--- a/styles.css
+++ b/styles.css
@@ -14,3 +14,13 @@ body{
     background-color: var(--cor-fundo);
     color: var(--cor-fonte-primaria);
 }
+
+.apresentacao__principal{
+    background-image: url("./assets/Background.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+
+.apresentacao__secao{
+    height: 100vh;
+}
