--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,8 @@ body{
 
 .apresentacao__secao{
     height: 100vh;
+    display: grid;
+    grid-template-columns: 50% 50%;
 }
 
 .apresentacao__secao__botao{
@@ -31,4 +33,9 @@ body{
     padding: 1em;
     color: var(--cor-fonte-primaria);
     display: block;
+}
+
+.apresentacao__secao__botao--secundario{
+    background-color: transparent;
+    border: 2px solid var(--cor-fonte-primaria);
 }
