--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@
     --cor-fonte-primaria: #ffffff;
     --cor-fonte-secundaria: #c0c0c0;
     --cor-botao: #167bf7;
+    --fonte-principal: 'Inter';
 }
 
 *{
@@ -13,6 +14,9 @@
 body{
     background-color: var(--cor-fundo);
     color: var(--cor-fonte-primaria);
+    font-family: var(--fonte-principal);
+    font-size: 16px;
+    font-weight: 400;
 }
 
 .apresentacao__principal{
@@ -27,15 +31,26 @@ body{
     grid-template-columns: 50% 50%;
 }
 
+.apresentacao__secao__titulo{
+    font-size: 28px;
+    font-weight: 700;
+}
+
 .apresentacao__secao__botao{
     background-color: var(--cor-botao);
     border-radius: 5px;
     padding: 1em;
     color: var(--cor-fonte-primaria);
     display: block;
+    text-decoration: none;
 }
 
 .apresentacao__secao__botao--secundario{
     background-color: transparent;
     border: 2px solid var(--cor-fonte-primaria);
+}
+
+.apresentacao__secao__texto{
+    font-size: 12px;
+    color: var(--cor-fonte-secundaria);
 }
