--- a/styles.css
+++ b/styles.css
@@ -19,38 +19,49 @@ body{
     font-weight: 400;
 }
 
-.apresentacao__principal{
-    background-image: url("./assets/Background.png");
-    background-repeat: no-repeat;
-    background-size: contain;
-}
-
 .apresentacao__secao{
     height: 100vh;
     display: grid;
     grid-template-columns: 50% 50%;
 }
 
-.apresentacao__secao__titulo{
+.apresentacao__secao--principal{
+    background-image: url("./assets/Background.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+    align-items: center;
+    text-align: center;
+}
+
+.apresentacao__secao__caixa{
+    margin: 0 6em;
+}
+
+.apresentacao__secao__caixa__titulo{
     font-size: 28px;
     font-weight: 700;
 }
 
-.apresentacao__secao__botao{
+.apresentacao__secao__caixa__imagem{
+    margin: 1em 0 2em 0;
+}
+
+.apresentacao__secao__caixa__botao{
     background-color: var(--cor-botao);
     border-radius: 5px;
     padding: 1em;
     color: var(--cor-fonte-primaria);
     display: block;
     text-decoration: none;
+    margin-bottom: 1em;
 }
 
-.apresentacao__secao__botao--secundario{
+.apresentacao__secao__caixa__botao--secundario{
     background-color: transparent;
     border: 2px solid var(--cor-fonte-primaria);
 }
 
-.apresentacao__secao__texto{
+.apresentacao__secao__caixa__texto{
     font-size: 12px;
     color: var(--cor-fonte-secundaria);
 }
