--- a/styles.css
+++ b/styles.css
@@ -93,3 +93,23 @@ body{
     display: inline-block;
     margin-top: 1em;
 }
+
+.apresentacao__secao--final{
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    margin: 0 6em;
+}
+
+.apresentacao__secao__caixa--final{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 2.5em 0;
+    font-weight: 700;
+    font-size: 32px;
+}
